# Celestial-Drift

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  build_x64_vs13.bat  build_x64_vs15.bat  readme.md
lib/x64/: freetype-gl_vs13.lib  freetype-gl_vs15.lib  freetype.lib  freetype_vs13.lib
resources/shaders/ogl/: 2dfont.frag  2dfont.vert  2dmenu.frag  2dmenu.vert  basic.frag  basic.vert  grid.frag  grid.vert  skybox.frag  skybox.vert  texture.frag  texture.vert
src/: CMakeLists.txt  CommandParser.cpp  CommandParser.h  Entity.cpp  Entity.h  Gamelogic.cpp  Physics.cpp  Physics.h  Ship.cpp  SoundItem.h  SoundManager.cpp  SoundManager.h  TextureManager.cpp  TextureManager.h  common.h  component.cpp  component.h  component_camera.cpp  component_camera.h  component_mesh_renderer.cpp  component_mesh_renderer.h  component_npc_shipdriver.cpp  component_npc_shipdriver.h  component_player_shipdriver.cpp  component_player_shipdriver.h  component_powerup.cpp  component_powerup.h  component_shipdriver.cpp  component_shipdriver.h  component_track.cpp  component_track.h  cvar.cpp  cvar.h  filesystem.cpp  filesystem.h  font.h  gamelogic.h  genericInput.h  groundplane.cpp  input.cpp  (+36 more)
